// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dataset Properties Panel Edit existing dataset 1`] = `
<div
  className="panel panel-default domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
    id="dataset-header-id"
    onClick={[Function]}
  >
    <span
      className="domain-panel-status-icon"
    >
      <span
        className="fa fa-check-circle"
      />
    </span>
    <span
      className="domain-panel-title"
    >
      Dataset1 - Dataset Properties
    </span>
    <span
      className="pull-right"
    >
      <span
        className="fa fa-lg fa-chevron-down domain-form-collapse-btn"
      />
    </span>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse in"
  >
    <div
      className="panel-body"
    >
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-12"
        >
          <div
            className="row"
          >
            <div
              className="col-xs-12"
            >
              <a
                className="domain-field-float-right"
                href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createDataset"
                rel="noopener noreferrer"
                target="_blank"
              >
                Learn more about designing datasets
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-md-5"
        >
          <div
            className="domain-field-section-heading"
          >
            Basic Properties
          </div>
          <div
            className="row margin-top"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Name
                <div
                  className="overlay-trigger"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <span
                    className="label-help-target"
                  >
                    <span
                      className="label-help-icon fa fa-question-circle"
                    />
                  </span>
                </div>
                 *
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <input
                className="form-control"
                disabled={false}
                id="name"
                onChange={[Function]}
                placeholder="Enter a name for this dataset"
                type="text"
                value="Dataset1"
              />
            </div>
            <div
              className="col-xs-1"
            />
          </div>
          <div
            className="row margin-top"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Label
                <div
                  className="overlay-trigger"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <span
                    className="label-help-target"
                  >
                    <span
                      className="label-help-icon fa fa-question-circle"
                    />
                  </span>
                </div>
                 *
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <input
                className="form-control"
                disabled={false}
                id="label"
                onChange={[Function]}
                type="text"
                value="Dataset One"
              />
            </div>
            <div
              className="col-xs-1"
            />
          </div>
          <div
            className="row margin-top"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Description
                
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <textarea
                className="form-control"
                id="description"
                onChange={[Function]}
                value="This is the first dataset"
              />
            </div>
          </div>
          <div
            className="row margin-top"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Category
                <div
                  className="overlay-trigger"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <span
                    className="label-help-target"
                  >
                    <span
                      className="label-help-icon fa fa-question-circle"
                    />
                  </span>
                </div>
                
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <div
                className="select-input-container "
              >
                <div
                  className=""
                >
                  <div
                    className="select-input css-b62m3t-container"
                    id="selectinput-10"
                    onKeyDown={[Function]}
                  >
                    <span
                      className="css-1f43avz-a11yText-A11yText"
                      id="react-select-4-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      className="css-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      className="select-input__control css-13cymwt-control"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <div
                        className="select-input__value-container select-input__value-container--has-value css-1fdsijx-ValueContainer"
                      >
                        <div
                          className="select-input__single-value css-1dimb5e-singleValue"
                        >
                          A
                        </div>
                        <div
                          className="select-input__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-expanded={false}
                            aria-haspopup={true}
                            autoCapitalize="none"
                            autoComplete="off"
                            autoCorrect="off"
                            className="select-input__input"
                            disabled={false}
                            id="react-select-4-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            required={false}
                            role="combobox"
                            spellCheck="false"
                            style={
                              {
                                "background": 0,
                                "border": 0,
                                "color": "inherit",
                                "font": "inherit",
                                "gridArea": "1 / 2",
                                "label": "input",
                                "margin": 0,
                                "minWidth": "2px",
                                "opacity": 1,
                                "outline": 0,
                                "padding": 0,
                                "width": "100%",
                              }
                            }
                            tabIndex={0}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <div
                          aria-hidden="true"
                          className="select-input__indicator select-input__clear-indicator css-1xc3v61-indicatorContainer"
                          onMouseDown={[Function]}
                          onTouchEnd={[Function]}
                        >
                          <svg
                            aria-hidden="true"
                            className="css-tj5bde-Svg"
                            focusable="false"
                            height={20}
                            viewBox="0 0 20 20"
                            width={20}
                          >
                            <path
                              d="M14.348 14.849c-0.469 0.469-1.229 0.469-1.697 0l-2.651-3.030-2.651 3.029c-0.469 0.469-1.229 0.469-1.697 0-0.469-0.469-0.469-1.229 0-1.697l2.758-3.15-2.759-3.152c-0.469-0.469-0.469-1.228 0-1.697s1.228-0.469 1.697 0l2.652 3.031 2.651-3.031c0.469-0.469 1.228-0.469 1.697 0s0.469 1.229 0 1.697l-2.758 3.152 2.758 3.15c0.469 0.469 0.469 1.229 0 1.698z"
                            />
                          </svg>
                        </div>
                        <span
                          className="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          className="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                          onMouseDown={[Function]}
                          onTouchEnd={[Function]}
                        >
                          <svg
                            aria-hidden="true"
                            className="css-tj5bde-Svg"
                            focusable="false"
                            height={20}
                            viewBox="0 0 20 20"
                            width={20}
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="category"
                      type="hidden"
                      value="A"
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-xs-1"
            />
          </div>
        </div>
        <div
          className="col-xs-12 col-md-5"
        >
          <div
            className="domain-field-section-heading"
          >
            Data Row Uniqueness
            <div
              className="overlay-trigger"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="label-help-target"
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
          </div>
          <div
            className="dataset_data_row_uniqueness_container"
          >
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="dataRowSetting"
                  onChange={[Function]}
                  type="radio"
                  value={0}
                />
                Participants
                 only (demographic data)
              </label>
            </div>
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="dataRowSetting"
                  onChange={[Function]}
                  type="radio"
                  value={1}
                />
                Participants
                 and 
                visits
              </label>
            </div>
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={true}
                  disabled={false}
                  name="dataRowSetting"
                  onChange={[Function]}
                  type="radio"
                  value={2}
                />
                Participants
                , 
                visits
                , and additional key field
              </label>
            </div>
          </div>
          <div
            className="dataset_data_row_element_show"
          >
            <div
              className="row margin-top"
            >
              <div
                className="col-xs-5"
              >
                Additional Key 
                <span
                  className="domain-no-wrap"
                >
                  Field
                  <div
                    className="overlay-trigger"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <span
                      className="label-help-target"
                    >
                      <span
                        className="label-help-icon fa fa-question-circle"
                      />
                    </span>
                  </div>
                  
                </span>
              </div>
              <div
                className="col-xs-7"
              >
                <div
                  className="select-input-container "
                >
                  <div
                    className=""
                  >
                    <div
                      className="select-input css-b62m3t-container"
                      id="selectinput-13"
                      onKeyDown={[Function]}
                    >
                      <span
                        className="css-1f43avz-a11yText-A11yText"
                        id="react-select-5-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        className="css-1f43avz-a11yText-A11yText"
                        role="log"
                      />
                      <div
                        className="select-input__control css-13cymwt-control"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <div
                          className="select-input__value-container select-input__value-container--has-value css-1fdsijx-ValueContainer"
                        >
                          <div
                            className="select-input__single-value css-1dimb5e-singleValue"
                          >
                            Name
                          </div>
                          <div
                            className="select-input__input-container css-qbdosj-Input"
                            data-value=""
                          >
                            <input
                              aria-activedescendant=""
                              aria-autocomplete="list"
                              aria-expanded={false}
                              aria-haspopup={true}
                              autoCapitalize="none"
                              autoComplete="off"
                              autoCorrect="off"
                              className="select-input__input"
                              disabled={false}
                              id="react-select-5-input"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              required={false}
                              role="combobox"
                              spellCheck="false"
                              style={
                                {
                                  "background": 0,
                                  "border": 0,
                                  "color": "inherit",
                                  "font": "inherit",
                                  "gridArea": "1 / 2",
                                  "label": "input",
                                  "margin": 0,
                                  "minWidth": "2px",
                                  "opacity": 1,
                                  "outline": 0,
                                  "padding": 0,
                                  "width": "100%",
                                }
                              }
                              tabIndex={0}
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            className="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            className="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                            onMouseDown={[Function]}
                            onTouchEnd={[Function]}
                          >
                            <svg
                              aria-hidden="true"
                              className="css-tj5bde-Svg"
                              focusable="false"
                              height={20}
                              viewBox="0 0 20 20"
                              width={20}
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                      <input
                        name="keyPropertyName"
                        type="hidden"
                        value="Name"
                      />
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="dataset_data_row_element_show"
          >
            <div
              className="checkbox"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  id="keyPropertyManaged"
                  onChange={[Function]}
                  type="checkbox"
                />
                Let server manage fields to make entries unique
              </label>
            </div>
          </div>
        </div>
        <div
          className="col-xs-12 col-md-2"
        >
          <button
            className="domain-field-float-right btn btn-default"
            onClick={[Function]}
            type="button"
          >
            Advanced Settings
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dataset Properties Panel New dataset 1`] = `
<div
  className="panel panel-default domain-form-panel lk-border-theme-light panel panel-default"
>
  <div
    className="domain-panel-header domain-heading-collapsible domain-panel-header-expanded labkey-page-nav"
    id="dataset-header-id"
    onClick={[Function]}
  >
    <span
      className="domain-panel-status-icon"
    >
      <span
        className="fa fa-check-circle"
      />
    </span>
    <span
      className="domain-panel-title"
    >
      Dataset Properties
    </span>
    <span
      className="pull-right"
    >
      <span
        className="fa fa-lg fa-chevron-down domain-form-collapse-btn"
      />
    </span>
  </div>
  <div
    aria-expanded={null}
    className="panel-collapse collapse in"
  >
    <div
      className="panel-body"
    >
      <div
        className="row margin-bottom"
      >
        <div
          className="col-xs-12"
        >
          <div
            className="row"
          >
            <div
              className="col-xs-12"
            >
              <a
                className="domain-field-float-right"
                href="https://www.labkey.org/Documentation/wiki-page.view?referrer=inPage&name=createDataset"
                rel="noopener noreferrer"
                target="_blank"
              >
                Learn more about designing datasets
              </a>
            </div>
          </div>
        </div>
      </div>
      <div
        className="row"
      >
        <div
          className="col-xs-12 col-md-5"
        >
          <div
            className="domain-field-section-heading"
          >
            Basic Properties
          </div>
          <div
            className="row margin-top"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Name
                <div
                  className="overlay-trigger"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <span
                    className="label-help-target"
                  >
                    <span
                      className="label-help-icon fa fa-question-circle"
                    />
                  </span>
                </div>
                 *
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <input
                className="form-control"
                disabled={false}
                id="name"
                onChange={[Function]}
                placeholder="Enter a name for this dataset"
                type="text"
                value={null}
              />
            </div>
            <div
              className="col-xs-1"
            />
          </div>
          <div
            className="row margin-top"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Label
                <div
                  className="overlay-trigger"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <span
                    className="label-help-target"
                  >
                    <span
                      className="label-help-icon fa fa-question-circle"
                    />
                  </span>
                </div>
                
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <input
                className="form-control"
                disabled={false}
                id="label"
                onChange={[Function]}
                type="text"
                value={null}
              />
            </div>
            <div
              className="col-xs-1"
            />
          </div>
          <div
            className="row margin-top"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Description
                
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <textarea
                className="form-control"
                id="description"
                onChange={[Function]}
                value=""
              />
            </div>
          </div>
          <div
            className="row margin-top"
          >
            <div
              className="col-xs-4"
            >
              <span
                className="domain-no-wrap"
              >
                Category
                <div
                  className="overlay-trigger"
                  onClick={[Function]}
                  onMouseEnter={[Function]}
                  onMouseLeave={[Function]}
                >
                  <span
                    className="label-help-target"
                  >
                    <span
                      className="label-help-icon fa fa-question-circle"
                    />
                  </span>
                </div>
                
              </span>
            </div>
            <div
              className="col-xs-7"
            >
              <div
                className="select-input-container "
              >
                <div
                  className=""
                >
                  <div
                    className="select-input css-b62m3t-container"
                    id="selectinput-3"
                    onKeyDown={[Function]}
                  >
                    <span
                      className="css-1f43avz-a11yText-A11yText"
                      id="react-select-2-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      className="css-1f43avz-a11yText-A11yText"
                      role="log"
                    />
                    <div
                      className="select-input__control css-13cymwt-control"
                      onMouseDown={[Function]}
                      onTouchEnd={[Function]}
                    >
                      <div
                        className="select-input__value-container css-1fdsijx-ValueContainer"
                      >
                        <div
                          className="select-input__placeholder css-1jqq78o-placeholder"
                          id="react-select-2-placeholder"
                        >
                          Select dataset category
                        </div>
                        <div
                          className="select-input__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-activedescendant=""
                            aria-autocomplete="list"
                            aria-describedby="react-select-2-placeholder"
                            aria-expanded={false}
                            aria-haspopup={true}
                            autoCapitalize="none"
                            autoComplete="off"
                            autoCorrect="off"
                            className="select-input__input"
                            disabled={false}
                            id="react-select-2-input"
                            onBlur={[Function]}
                            onChange={[Function]}
                            onFocus={[Function]}
                            required={false}
                            role="combobox"
                            spellCheck="false"
                            style={
                              {
                                "background": 0,
                                "border": 0,
                                "color": "inherit",
                                "font": "inherit",
                                "gridArea": "1 / 2",
                                "label": "input",
                                "margin": 0,
                                "minWidth": "2px",
                                "opacity": 1,
                                "outline": 0,
                                "padding": 0,
                                "width": "100%",
                              }
                            }
                            tabIndex={0}
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          className="select-input__indicator-separator css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          className="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                          onMouseDown={[Function]}
                          onTouchEnd={[Function]}
                        >
                          <svg
                            aria-hidden="true"
                            className="css-tj5bde-Svg"
                            focusable="false"
                            height={20}
                            viewBox="0 0 20 20"
                            width={20}
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                    <input
                      name="category"
                      type="hidden"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
            <div
              className="col-xs-1"
            />
          </div>
        </div>
        <div
          className="col-xs-12 col-md-5"
        >
          <div
            className="domain-field-section-heading"
          >
            Data Row Uniqueness
            <div
              className="overlay-trigger"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onMouseLeave={[Function]}
            >
              <span
                className="label-help-target"
              >
                <span
                  className="label-help-icon fa fa-question-circle"
                />
              </span>
            </div>
          </div>
          <div
            className="dataset_data_row_uniqueness_container"
          >
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="dataRowSetting"
                  onChange={[Function]}
                  type="radio"
                  value={0}
                />
                Participants
                 only (demographic data)
              </label>
            </div>
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={true}
                  disabled={false}
                  name="dataRowSetting"
                  onChange={[Function]}
                  type="radio"
                  value={1}
                />
                Participants
                 and 
                visits
              </label>
            </div>
            <div
              className="radio"
            >
              <label
                title=""
              >
                <input
                  checked={false}
                  disabled={false}
                  name="dataRowSetting"
                  onChange={[Function]}
                  type="radio"
                  value={2}
                />
                Participants
                , 
                visits
                , and additional key field
              </label>
            </div>
          </div>
          <div
            className="dataset_data_row_element_hide"
          >
            <div
              className="row margin-top"
            >
              <div
                className="col-xs-5"
              >
                Additional Key 
                <span
                  className="domain-no-wrap"
                >
                  Field
                  <div
                    className="overlay-trigger"
                    onClick={[Function]}
                    onMouseEnter={[Function]}
                    onMouseLeave={[Function]}
                  >
                    <span
                      className="label-help-target"
                    >
                      <span
                        className="label-help-icon fa fa-question-circle"
                      />
                    </span>
                  </div>
                  
                </span>
              </div>
              <div
                className="col-xs-7"
              >
                <div
                  className="select-input-container "
                >
                  <div
                    className=""
                  >
                    <div
                      className="select-input select-input--is-disabled css-3iigni-container"
                      id="selectinput-6"
                      onKeyDown={[Function]}
                    >
                      <span
                        className="css-1f43avz-a11yText-A11yText"
                        id="react-select-3-live-region"
                      />
                      <span
                        aria-atomic="false"
                        aria-live="polite"
                        aria-relevant="additions text"
                        className="css-1f43avz-a11yText-A11yText"
                        role="log"
                      />
                      <div
                        aria-disabled={true}
                        className="select-input__control select-input__control--is-disabled css-1mgq1wa-control"
                        onMouseDown={[Function]}
                        onTouchEnd={[Function]}
                      >
                        <div
                          className="select-input__value-container css-1fdsijx-ValueContainer"
                        >
                          <div
                            className="select-input__placeholder css-pxd85q-placeholder"
                            id="react-select-3-placeholder"
                          >
                            Select...
                          </div>
                          <div
                            className="select-input__input-container css-1h01tm3-Input"
                            data-value=""
                          >
                            <input
                              aria-activedescendant=""
                              aria-autocomplete="list"
                              aria-describedby="react-select-3-placeholder"
                              aria-expanded={false}
                              aria-haspopup={true}
                              autoCapitalize="none"
                              autoComplete="off"
                              autoCorrect="off"
                              className="select-input__input"
                              disabled={true}
                              id="react-select-3-input"
                              onBlur={[Function]}
                              onChange={[Function]}
                              onFocus={[Function]}
                              required={false}
                              role="combobox"
                              spellCheck="false"
                              style={
                                {
                                  "background": 0,
                                  "border": 0,
                                  "color": "inherit",
                                  "font": "inherit",
                                  "gridArea": "1 / 2",
                                  "label": "input",
                                  "margin": 0,
                                  "minWidth": "2px",
                                  "opacity": 1,
                                  "outline": 0,
                                  "padding": 0,
                                  "width": "100%",
                                }
                              }
                              tabIndex={0}
                              type="text"
                              value=""
                            />
                          </div>
                        </div>
                        <div
                          className="select-input__indicators css-1hb7zxy-IndicatorsContainer"
                        >
                          <span
                            className="select-input__indicator-separator css-894a34-indicatorSeparator"
                          />
                          <div
                            aria-hidden="true"
                            className="select-input__indicator select-input__dropdown-indicator css-1xc3v61-indicatorContainer"
                            onMouseDown={[Function]}
                            onTouchEnd={[Function]}
                          >
                            <svg
                              aria-hidden="true"
                              className="css-tj5bde-Svg"
                              focusable="false"
                              height={20}
                              viewBox="0 0 20 20"
                              width={20}
                            >
                              <path
                                d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                              />
                            </svg>
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
          <div
            className="dataset_data_row_element_hide"
          >
            <div
              className="checkbox disabled"
            >
              <label
                title=""
              >
                <input
                  disabled={true}
                  id="keyPropertyManaged"
                  onChange={[Function]}
                  type="checkbox"
                />
                Let server manage fields to make entries unique
              </label>
            </div>
          </div>
        </div>
        <div
          className="col-xs-12 col-md-2"
        >
          <button
            className="domain-field-float-right btn btn-default"
            onClick={[Function]}
            type="button"
          >
            Advanced Settings
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
